# newtonx_gyomu_pj

./: '  解析結果.md
code/: kintai_core.py  kintai_results_20260511_1524.json  kintai_results_20260511_1636.json  kintai_results_20260518_1017.json  main.py  requirements.txt  解析結果.md
newtonx_adk/: .gitignore  MANIFEST.in  README.md  newtonx_adk-0.10.5-py3-none-any.whl  pyproject.toml  requirements.txt
newtonx_adk/adk_examples/: README.md  __init__.py
newtonx_adk/adk_examples/auto_runner/: README.md  auto_runner.py  config.yml  requirements.txt  sample_document.txt
newtonx_adk/adk_examples/cli_example/: README.md  cli_example.py  requirements.txt  upload_sample.txt
newtonx_adk/adk_examples/expense_processor/: README.md  expense_processor_example.py  requirements.txt
newtonx_adk/docs/: auth_setup_guide.md  newtonx_adk_knowledge.md
newtonx_adk/docs/adk/: API_REFERENCE.md  README.md  USAGE_GUIDE.md
newtonx_adk/docs/newtonx_webapi/: auth.md  newtonx_api_implementation_notes.md  openapi.yaml
newtonx_adk/tools/: README.md  check_config.py  clear_config.py  setup_config.py
プロンプト/: プロンプト.txt
